@@ -319,3 +319,5 @@ databoundcontrol_datasourceid_invalid	= databoundcontrol_datasourceid_invalid
 databoundcontrol_datamember_invalid		= databoundcontrol_datamember_invalid
 
 clientscript_invalid_file_position		= Invalid file position '{1}' for TClientScript control '{0}', must be 'Head', 'Here' or 'Begin'.
+
+tdatepicker_autopostback_unsupported	= '{0}' does not support AutoPostBack.
